--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="main"></div>
+    <div id="maincontain"></div>
     <script src="./index.js"></script>
   </body>
 </html>
